--- a/client/package.json
+++ b/client/package.json
@@ -16,8 +16,10 @@
     "axios": "^1.12.2",
     "pinia": "^3.0.3",
     "quasar": "^2.18.2",
+    "vite-plugin-pwa": "^1.2.0",
     "vue": "^3.5.21",
-    "vue-router": "^4.5.1"
+    "vue-router": "^4.5.1",
+    "workbox-core": "^7.4.0"
   },
   "devDependencies": {
     "@quasar/vite-plugin": "^1.10.0",
